solved text layer alignment bug, everything working fine, need performance optmization

--- a/src/style.css
+++ b/src/style.css
@@ -1,12 +1,21 @@
+html,
 body {
   margin: 0;
+  padding: 0;
   background-color: #111;
-  color: #ccc;
+  color: #d0d0fd;
   font-family: monospace;
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 100vh;
+  height: 100%;
+  width: 100%;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
 }
 
 header {
@@ -15,6 +24,7 @@ header {
   text-align: center;
   padding: 0.5rem;
   border-bottom: 1px solid #333;
+  flex-shrink: 0;
 }
 
 #controls {
@@ -47,8 +57,8 @@ header {
 
 #viewer-container {
   flex: 1;
-  width: 100%;
-  overflow-y: scroll;
+  /* width: 100%; */
+  overflow: auto;
   background-color: #000;
   display: flex;
   flex-direction: column;
@@ -87,4 +97,29 @@ header {
 
 .annotationLayer a:hover {
   outline: 1px dashed rgba(0, 0, 255, 0.3);
+}
+
+.textLayer {
+  color: transparent;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: auto;
+  z-index: 5;
+  --total-scale-factor: 1;
+}
+
+.textLayer span {
+  position: absolute;
+  white-space: pre;
+  transform-origin: 0 0;
+  line-height: 1;
+  user-select: text;
+  -webkit-user-select: text;
+  color: transparent;
+  background: none;
+  padding: 0;
+  margin: 0;
 }
